Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -6,7 +6,7 @@ report = Signaler
 errorDetails = Détails de l'erreur
 cancel = Annuler
 dismiss = Ignorer
-errorTitle = Erreur
+errorTitle = Erreur \!
 bytesProgress = {0} sur {1}
 messageFromServer = Message du serveur
 # i need context for this one
@@ -114,6 +114,7 @@ chat.userContext.removeFoe = Retirer des ennemis
 chat.userContext.viewLiveReplay = Observer la partie
 chat.userContext.joinGame = Rejoindre
 chat.userContext.viewReplays = Voir les rediffusions
+# Fuzzy
 chat.userContext.inviteToGame = Inviter
 chat.userContext.kick = Éjecter…
 chat.userContext.ban = Bannir…
@@ -180,7 +181,7 @@ game.ratingFormat.minOnly = >\={0,number,#}
 game.ratingFormat.maxOnly = <\={0,number,#}
 game.ratingFormat.minMax = {0,number,#} - {1,number,#}
 game.joinGameRatingConfirmation.title = Niveau hors limites
-game.joinGameRatingConfirmation.text = Cette partie est destinée à des joueurs dont le classement est compris entre {0,number,#} et {1,number,#}. Votre classement est de {2,number,#}.\n\nÊtes-vous sûr de vouloir rejoindre cette partie ?
+game.joinGameRatingConfirmation.text = Cette partie est destinée à des joueurs dont le niveau est compris entre {0,number,#} et {1,number,#}. Votre niveau est de {2,number,#}.\n\nÊtes-vous sûr de vouloir rejoindre cette partie ?
 game.type = Type
 game.mods = Mods
 game.players.format = {0,number,#}/{1,number,#}
@@ -565,7 +566,7 @@ UIDNotExecuted = Impossible de lancer le programme de génération d'UID. Progra
 replay.copyUrl = Copier l'URL de la rediffusion
 game.showRatingChange = Afficher les variations de niveau
 game.notValid = Partie non classée
-game.notRatedYet = Variation de niveau inaccessible pour l'instant.
+game.notRatedYet = Variations de niveau indisponibles pour l'instant
 game.ended = "{0}" vous a plu ? Faites-le savoir \!
 game.rate = Noter
 tiles.comparator.playersDescending = Tri par Joueur Décroissant
@@ -660,7 +661,7 @@ view.showSidePane = Montrer les détails
 view.hideSidePane = Cacher les détails
 menu.revealReplayFolder = Afficher le répertoire des rediffusions
 menu.revealGamePrefsFile = Afficher le fichier game.prefs
-ranked1v1.queuePopTimer = Correspondance dans {0,number,0}\:{1,number,00}
+ranked1v1.queuePopTimer = Recherche de partie dans {0,number,0}\:{1,number,00}
 game.create.generatedMap = Générer une nouvelle carte
 game.avgRating.format = {0,number,#}
 game.mapGeneration.notification.title = Génération de la carte...
@@ -685,7 +686,6 @@ settings.chat.addAutoJoinChannel = Ajouter le canal
 settings.chat.removeAutoJoinChannel = Retirer
 settings.chat.autoJoinChannelList = Canaux à connexion automatique
 settings.chat.autoJoinChannelPrompt = Saisissez le canal (\#nom_canal)
-# Fuzzy
 settings.fa.forceRelay = Forcer la connexion relai
 game.player.globalRating = Niveau global d'un des joueurs
 game.player.ladderRating = Niveau 1c1 d'un des joueurs
@@ -741,7 +741,7 @@ game.ratingRange = Niveau demandé
 game.averageRating = Niveau moyen
 tiles.comparator.averageRatingDescending = Tri par niveau moyen décroissant
 tiles.comparator.averageRatingAscending = Tri par niveau moyen croissant
-replay.dateTooltip = Date de démarrage
+replay.dateTooltip = Date de début
 replay.timeTooltip = Heure de début
 replay.modTooltip = Type de partie
 replay.durationTooltip = Durée réelle
@@ -754,7 +754,7 @@ mapVault.upload.openValidation = Valider les métadonnées
 replay.ignoreMapNotFound = Ignorer et démarrer la rediffusion
 replay.abortAfterMapNotFound = Annuler et afficher plus d'informations
 replay.mapDownloadFailed = Le téléchargement de la carte a échoué pour cette rediffusion 
-replay.mapDownloadFailed.wannaContinue = Nous n'avons pas pu trouver la carte mentionnée dans le fichier de rediffusion. Cependant, le jeu peut encore savoir où le trouver. Considérez ceci comme un avertissement, car la rediffusion pourrait être corrompu.
+replay.mapDownloadFailed.wannaContinue = Nous n'avons pas pu trouver la carte mentionnée dans le fichier de rediffusion. Cependant, le jeu peut encore savoir où le trouver. Considérez ceci comme un avertissement, car la rediffusion pourrait être corrompue.
 map.unknown = inconnu
 settings.account.goWebsite = Pour la plupart des activités liées au compte, veuillez visiter notre site web
 settings.account.goWebsiteButton = Visiter le site web de FAForever
@@ -910,7 +910,6 @@ settings.general.cacheLifeTime = Fichier gardés en cache pour (en jours) \:
 games.create.enforceRating = Imposé
 chat.filter.countryPrompt = Code Pays
 game.generateMap.generationType = Type de génération
-# Fuzzy
 game.generateMap.casual = Normal
 game.generateMap.tournament = Tournoi
 game.generateMap.blind = Aveugle
@@ -934,11 +933,12 @@ error.game.filesNotAccessible = Certains fichiers du jeu n'ont pas pu être copi
 game.gameRunning = Le jeu ne peut pas être démarré car une autre instance de Forged Alliance est en cours d'exécution.
 replay.gameRunning = La rediffusion ne peut pas être démarrée car une autre instance de Forged Alliance est en cours d'exécution. Il est possible d'activer dans les paramètres la fonctionnalité expérimentale permettant l'accès aux rediffusions pendant que vous êtes dans le lobby.
 gameUpdate.error.gameNotWritableAllowMultiOn = Le jeu n'a pas pu être mis à jour dans la version requise pour cette partie. La rediffusion ou la partie que vous essayez de démarrer n'est pas dans une version compatible avec celle déjà démarrée.
-game.create.generationType = Type de carte générée \:\nNormal - Prévisualisation générée pour le client et le lobby\nTournoi - Paramètres aléatoires, Pas de prévisualisation client, Horodatage ajoutée à la description de la carte\nAveugle - Paramètres aléatoires, Pas de prévisualisation client ni lobby, Horodatage ajoutée à la description de la carte
+game.create.generationType = Type de carte générée \:\nNormal - Prévisualisation générée pour le client et le lobby\nTournoi - Paramètres aléatoires, Pas de prévisualisation client, Horodatage ajouté à la description de la carte\nAveugle - Paramètres aléatoires, Pas de prévisualisation client ni lobby, Horodatage ajouté à la description de la carte\nInexploré - Terrain et ressources doivent être révélés par des unités
 chat.userColor = Couleur
 review.currentVersion = Version actuelle
 review.version = Version {0}
 review.date = {0} sur {1}
+# Fuzzy
 modVault.upload.rules = Je confirme avoir lu le règlement concernant l'ajout de mod.
 saveQuery = Enreg. Requête
 logical = Rech. Avancée
@@ -975,3 +975,63 @@ search.beforeDate = Date de fin
 search.removeQuery = Suppr. Requête
 game.globalRating = Niveau global
 game.ladderRating = Niveau 1c1
+# Fuzzy
+leaderboard.divisionName = Division
+play.teamMatchmaking = Recherche de partie
+teammatchmaking.leaveParty = Quitter l'équipe
+teammatchmaking.invitePlayer = Inviter des joueurs
+teammatchmaking.invite = Inviter
+teammatchmaking.invitedPlayers = Joueurs invités \:
+teammatchmaking.mapPool = Liste des cartes
+teammatchmaking.playersInQueue = En file d''attente \: {0,number,#}
+teammatchmaking.queuePopTimer = Recherche de partie dans {0,number,0}\:{1,number,00}
+teammatchmaking.gameCount = Parties jouées \: {0,number,#}
+teammatchmaking.notification.invite.title = Invité à rejoindre une équipe
+teammatchmaking.notification.invite.message = {0} vous a invité à rejoindre une équipe
+teammatchmaking.notification.invite.join = Rejoindre
+teammatchmaking.match.found = Partie trouvée \!
+teammatchmaking.match.starting = Lancement de la partie...
+teammatchmaking.match.cancelled = Partie annulée \!
+teammatchmaking.notification.matchFound.title = Partie trouvée
+teammatchmaking.notification.matchFound.message = Une partie a été trouvée et démarrera bientôt
+teammatchmaking.notification.inviteAlreadyInQueue.title = Vous êtes déjà dans une file d'attente
+teammatchmaking.notification.inviteAlreadyInQueue.message = Veuillez quitter toutes les files d'attente avant d'inviter un joueur
+teammatchmaking.notification.joinAlreadyInQueue.title = Vous êtes déjà dans une file d'attente
+teammatchmaking.notification.joinAlreadyInQueue.message = Veuillez quitter toutes les files d'attente avant de rejoindre une équipe
+teammatchmaking.notification.customAlreadyInQueue.title = Vous êtes déjà dans une file d'attente
+teammatchmaking.notification.customAlreadyInQueue.message = Veuillez quitter toutes les files d'attente avant de rejoindre une partie personnalisée
+teammatchmaking.notification.gameAlreadyRunning.title = Partie en cours
+teammatchmaking.notification.gameAlreadyRunning.message = Vous ne pouvez pas rejoindre une file d'attente quand vous êtes en cours de partie
+teammatchmaking.playerTitle = Recherche de partie en tant que \:
+teammatchmaking.partyTitle = Votre équipe \:
+teammatchmaking.queueTitle = Rejoignez une ou plusieurs files d'attente quand vous êtes prêts \:
+teammatchmaking.queueTitle.inGame = Impossible de rejoindre une file d'attente quand vous êtes en cours de partie
+teammatchmaking.queueTitle.memberInGame = Impossible de rejoindre une file d'attente quand quelqu'un est en cours de partie
+teammatchmaking.queueTitle.inParty = Le chef d'équipe rejoint les files d'attente
+teammatchmaking.queueTitle.inQueue = Votre équipe est maintenant en file d'attente
+teammatchmaking.queue.ladder1v1 = File d'attente 1c1
+teammatchmaking.queue.tmm2v2 = File d'attente 2c2
+chat.groupChat.playerDisconnect = {0} s''est déconnecté
+chat.groupChat.playerConnect = {0} s''est connecté
+game.generateMap.mexSlider = Extracteurs
+game.generateMap.reclaimSlider = Exploitation
+game.generateMap.unexplored = Inexploré
+replay.enrich.error = Impossible de télécharger les informations
+review.delete.error = Impossible de supprimer cet avis
+review.save.error = Impossible d'enregistrer cet avis
+settings.general.debugLog = Activer le DEBUG dans les logs
+settings.general.debugLog.description = Ajoute des informations de DEBUG dans les logs.
+settings.general.debugLog.button = Démarrer
+replay.inQueue = Impossible de démarrer la rediffusion car vous êtes dans une file d'attente. Quittez la file d'attente pour accéder aux rediffusions.
+replay.inParty = Impossible de démarrer la rediffusion car vous êtes dans une équipe. Quittez l'équipe pour accéder aux rediffusions.
+leaderboard.tmm_2v2.name = 2c2
+leaderboard.ladder_1v1.name = 1c1
+leaderboard.global.name = Global
+leaderboard.gamesPlayed = {0} Parties jouées \: {1,number,#}
+# Fuzzy
+leaderboard.rating = {0} Niveau(x)
+leaderboard.displayName = Classement
+userInfo.tooltipFormat.withRating = {0} ({1,number,#})
+userInfo.tooltipFormat.noRating = {0}
+# Fuzzy
+map.updater.search = Recherche de mise à jour de la carte
