Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -108,6 +108,7 @@ chat.userContext.removeFoe = Von Feinden entfernen
 chat.userContext.viewLiveReplay = Dem Spiel zuschauen
 chat.userContext.joinGame = Spiel beitreten
 chat.userContext.viewReplays = Zeige replays
+# Fuzzy
 chat.userContext.inviteToGame = Zu Spiel einladen
 chat.userContext.kick = Kicken…
 chat.userContext.ban = Bannen…
