Update messages_iw.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_iw.properties
+++ b/src/main/resources/i18n/messages_iw.properties
@@ -111,6 +111,7 @@ chat.userContext.removeFoe = הסר אויב
 chat.userContext.viewLiveReplay = צפה במשחק
 chat.userContext.joinGame = הצטרף למשחק
 chat.userContext.viewReplays = צפה בהקלטה
+# Fuzzy
 chat.userContext.inviteToGame = הזמן למשחק
 chat.userContext.kick = העף…
 chat.userContext.ban = הרחק…
