Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -110,6 +110,7 @@ chat.userContext.removeFoe = Elimina nemico
 chat.userContext.viewLiveReplay = Guarda partita
 chat.userContext.joinGame = Entra in partita
 chat.userContext.viewReplays = Vedi replay
+# Fuzzy
 chat.userContext.inviteToGame = Invito alla partita
 chat.userContext.kick = Espelli...
 chat.userContext.ban = Ban...
