Update messages_pl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -126,6 +126,7 @@ chat.userContext.removeFoe = Usuń wroga
 chat.userContext.viewLiveReplay = Oglądaj grę
 chat.userContext.joinGame = Dołącz do gry
 chat.userContext.viewReplays = Zobacz powtórki
+# Fuzzy
 chat.userContext.inviteToGame = Zaproś do gry
 chat.userContext.kick = Wyrzuć...
 chat.userContext.ban = Zbanuj...
@@ -879,3 +880,22 @@ chat.error.noHashTag = Nazwa Kanału musi rozpoczynać się od \# (Wypróbuj \#{
 game.gameStatus.hosting = Hostowanie
 mod.idNumber = \#{0}
 label.copy = kopiuj
+settings.fa.allowReplayWhileInGame = Pozwalaj na oglądanie powtórek będąc w grze
+settings.fa.allowReplayWhileInGame.description = Jeśli aktywujesz tą eksperymentalną funkcję będziesz mógł oglądać powtórki będąc w grze. Poza zaznaczeniem tej opcji będziesz musiał aktywować to w pliku game.prefs albo kliknij przycisk poniżej i zrobimy to za Ciebie. Jeśli przycisk jest nieaktywny to znaczy, że game.prefs już jest zaktualizowany. Jeśli będziesz włączał gry, których wersje nie pasują to mogą występować błędy.
+settings.fa.patchGamePrefsFailed = Nie udało się zaktualizować pliku game.prefs
+settings.fa.allowReplayWhileInGame.experimental = eksperymentalne
+error.game.filesNotAccessible = Niektóre pliki z zainstalowanej gry nie mogły zostać skopiowane do FAF, ale jeśli ostatnio ich nie modyfikowałeś w zainstalowanej wersji nie masz się czym przejmować. I tak uruchamiamy grę dla Ciebie.
+game.gameRunning = Forged Alliance już działa, nie możesz zacząć nowej gry dopóki nie zakończysz poprzedniej.
+replay.gameRunning = Nie możesz zobaczyć powtórki, bo Forged Alliance już działa. Jeśli chcesz możesz włączyć eksperymentalną funkcję do oglądania powtórek w lobby w ustawieniach.
+chat.userColor = kolor
+review.currentVersion = aktualna wersja
+main.mods = Mody
+game.date = Data
+game.onlyRanked = Tylko rankingowe
+game.map.author = Autor mapy
+vault.savedQueries = Ulubione
+map.onlyRanked = Tylko rankingowe
+map.widthPixels = szerokość (w pikselach)
+map.heightPixels = wysokość (w pikselach)
+query.moreFilters = więcej flitrów
+mod.onlyRanked = Tylko rankingowe
