Update messages_ru.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -120,6 +120,7 @@ chat.userContext.removeFoe = Убрать из противников
 chat.userContext.viewLiveReplay = Смотреть игру
 chat.userContext.joinGame = Присоединиться к игре
 chat.userContext.viewReplays = Смотреть реплеи
+# Fuzzy
 chat.userContext.inviteToGame = Пригласить в игру
 # Дорогой Gotoro, кнопки меню - не место для жаргона (даже игрового), если мы не хотим, чтобы игра походила на кусок фанатского *кху-кху*, нам лучше придерживаться правил официальной речи, без излишнего формализма.
 chat.userContext.kick = Выгнать...
