Update messages_es.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -113,6 +113,7 @@ chat.userContext.removeFoe = Eliminar rival
 chat.userContext.viewLiveReplay = Ver partida
 chat.userContext.joinGame = Unirse a partida
 chat.userContext.viewReplays = Ver repeticiones
+# Fuzzy
 chat.userContext.inviteToGame = Invitar a la partida
 chat.userContext.kick = Expulsar...
 chat.userContext.ban = Banear...
