Update messages_tr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -110,6 +110,7 @@ chat.userContext.removeFoe = Düşman kaldır
 chat.userContext.viewLiveReplay = Oyun izle
 chat.userContext.joinGame = Oyna katıl
 chat.userContext.viewReplays = Tekrarları göster
+# Fuzzy
 chat.userContext.inviteToGame = Oyna davet et
 chat.userContext.kick = At...
 chat.userContext.ban = Ban...
