Update messages_uk.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -119,6 +119,7 @@ chat.userContext.removeFoe = Вилучити зі списку ворогів
 chat.userContext.viewLiveReplay = Дивитися гру
 chat.userContext.joinGame = Долучитися до гри
 chat.userContext.viewReplays = Дивитись повтори
+# Fuzzy
 chat.userContext.inviteToGame = Запросити до гри
 chat.userContext.kick = Вигнати…
 chat.userContext.ban = Забанити…
