Add discord invite over matchmaker chat

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -105,6 +105,7 @@ teammatchmaking.queueTitle.inGame=Can't join queues while you are in a game
 teammatchmaking.queueTitle.memberInGame=Can't join queues while someone is in a game
 teammatchmaking.queueTitle.inParty=The party leader will join the queues
 teammatchmaking.queueTitle.inQueue=Your party is now in queue
+teammatchmaking.chat.topic=Find teammates and get gameplay advice on our official discord:
 teammatchmaking.queue.ladder1v1=1v1 Queue
 teammatchmaking.queue.tmm2v2=2v2 Queue
 statusBar.chatConnected=Chat connected
