Add ModerationService and ability to report from client

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -8,6 +8,7 @@ findHelp=If this error continues use the Get Help button to open the help forum.
 errorDetails=Error details
 cancel=Cancel
 dismiss=Dismiss
+close=Close
 errorTitle=Uh oh!
 bytesProgress={0} of {1}
 messageFromServer=Message from server
@@ -29,6 +30,7 @@ view.tiles=Tiles
 view.table=Table
 userMenu.logOut=Log out
 userMenu.showProfile=Show profile
+userMenu.moderationReport=Moderation reports
 menu.feedback=Feedback
 menu.exit=Exit
 menu.settings=Settings
@@ -740,6 +742,7 @@ replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
 replay.enrich.error=Information could not be downloaded
 game.showRatingChange=Show rating change
+game.report=Report Game
 game.reasonNotValid=Game was not rated. Reason: {0}
 game.reasonNotValid.desync=Too Many Desyncs
 game.reasonNotValid.wrongCondition=Wrong Victory Condition
@@ -926,3 +929,33 @@ review.save.error=This review could not be saved
 label.copy=copy
 gameUpdate.error.gameNotWritableAllowMultiOn=The game could not be patched to the required version for this game launch. You are trying to watch a replay or open a game of a conflicting version to the one you have already opened.
 map.updater.search=Search for a new version of the map
+report.description.placeholder=Please provide a short but thorough description of the incident you are reporting. If there are no records available of the incident (e.g. not something that happened in #aeolus or in-game), please provide us a screenshot of it. You can use any image hosting site, e.g. http://imgur.com/.
+report.description=Incident Report
+report.id=ID
+report.createTime=Created At
+report.offender=Offender
+report.moderator=Moderator
+report.notice=Notice
+report.status=Status
+report.gameID=Replay ID
+report.gameTime=Game Time Code
+report.gamePrompt=(If the issue happened in game)
+report.userSearch=Offender
+report.title=Moderation Report
+report.newReport=New Moderation Report
+report.submit=Submit Report
+report.noReports=You have not submitted any reports in the last year
+report.awaiting=Awaiting
+report.processing=Processing
+report.completed=Completed
+report.discarded=Discarded
+report.previousReports=Previous Reports
+report.warning.title=Warning
+report.warning.noGameTime=This report indicates the incident happened in a game please provide a game time code of the incident.
+report.warning.noOffender=Reports must include an offender
+report.warning.noOffenderInGame=Offender is not playing in the game indicated
+report.warning.noDescription=Reports must include an incident report
+report.warning.noPlayer=Username does not match any known player
+report.warning.gameIdNotNumeric=Replay id must be a number
+report.warning.noGame=Replay id does not match any known game
+report.error=Error submitting moderation report
