Refactor error notifications
Move to label over webview that will wrap text
Error details now in an expandable pane
Error details removed from user input errors

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -525,6 +525,7 @@ corruptedMods.show=Show
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
 corruptedReplayFiles.show=Show
 mapNotFound=Map ''{0}'' could not be found on the server nor on this computer.
+replayNotAvailable=Replay {0,number,#} is not yet available from the server. Please try again later.
 replayCouldNotBeStarted=Replay {0,number,#} could not be started. See error message below.
 liveReplayCouldNotBeStarted=Live replay could not be started. See error message below.
 duration.seconds={0,number,#}s
