Add getHelp button along with FA crash detection

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,6 +2,8 @@ yes=Yes
 no=No
 percentage={0,number,#.#}%
 report=Report
+getHelp=Get Help
+findHelp=If this error continues use the Get Help button to open the technical help page. Make sure to check the FAQ and previous topics. If you make a new topic please include your logs which can be opened from the menu in the top left.
 errorDetails=Error details
 cancel=Cancel
 dismiss=Dismiss
@@ -121,7 +123,7 @@ news.authoredFormat={0} on {1,date}
 chat.noOpenChats=No chats are open
 chat.joinAChannel=Join a channel
 chat.channelNamePrompt=e.g. #aeolus
-chat.error.noHashTag=Channel Name must start with # (Try #{0})
+chat.error.noHashTag=Channel Name must start with # (Try #{0}) aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 chat.messagePrompt=Type a message…
 chat.searchPrompt=Search…
 chat.category.moderators=Moderators
@@ -305,6 +307,7 @@ game.mapGeneration.failed.title=Map generation failed.
 game.mapGeneration.failed.message=The requested map could not be generated, the map generation process did not terminate within timeout. Killing process.
 game.mapGeneration.downloadGenerator.title=Downloading map generator version {0}
 game.mapGeneration.generateMap.title=Generating map... (Version: {0})
+game.crash=It looks like Forged Alliance crashed...
 featuredMod.displayName=Game mod name
 featuredMod.technicalName=Game mod short name
 ladder.searchPrompt=Search rank or player…
