--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,7 +3,7 @@ no=No
 percentage={0,number,#.#}%
 report=Report
 getHelp=Get Help
-findHelp=If this error continues use the Get Help button to open the technical help page. Make sure to check the FAQ and previous topics. If you make a new topic please include your logs which can be opened from the menu in the top left.
+findHelp=If this error continues use the Get Help button to open the help forum. Make sure to check the FAQ and previous topics. If you make a new topic please include your logs which can be opened from the menu in the top left of the client.
 errorDetails=Error details
 cancel=Cancel
 dismiss=Dismiss
@@ -307,7 +307,7 @@ game.mapGeneration.failed.title=Map generation failed.
 game.mapGeneration.failed.message=The requested map could not be generated, the map generation process did not terminate within timeout. Killing process.
 game.mapGeneration.downloadGenerator.title=Downloading map generator version {0}
 game.mapGeneration.generateMap.title=Generating map... (Version: {0})
-game.crash=It looks like Forged Alliance crashed...
+game.crash=It looks like Supreme Commander: Forged Alliance crashed...
 featuredMod.displayName=Game mod name
 featuredMod.technicalName=Game mod short name
 ladder.searchPrompt=Search rank or player…
