--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -123,7 +123,7 @@ news.authoredFormat={0} on {1,date}
 chat.noOpenChats=No chats are open
 chat.joinAChannel=Join a channel
 chat.channelNamePrompt=e.g. #aeolus
-chat.error.noHashTag=Channel Name must start with # (Try #{0}) aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+chat.error.noHashTag=Channel Name must start with # (Try #{0})
 chat.messagePrompt=Type a message…
 chat.searchPrompt=Search…
 chat.category.moderators=Moderators
