implement management of installed maps (only uninstall)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -929,6 +929,12 @@ review.save.error=This review could not be saved
 label.copy=copy
 gameUpdate.error.gameNotWritableAllowMultiOn=The game could not be patched to the required version for this game launch. You are trying to watch a replay or open a game of a conflicting version to the one you have already opened.
 map.updater.search=Search for a new version of the map
+management.maps.openButton.label=Manage installed maps
+management.maps.closeButton.label=Close
+management.maps.allMaps=All maps
+management.maps.customMaps=Custom maps
+management.maps.officialMaps=Official maps
+management.maps.uninstall.error=cannot uninstall the map
 report.description.placeholder=Please provide a short but thorough description of the incident you are reporting. If there are no records available of the incident (e.g. not something that happened in #aeolus or in-game), please provide us a screenshot of it. You can use any image hosting site, e.g. http://imgur.com/.
 report.description=Incident Report
 report.id=ID
