Issue/#2019 notification UI (#2153)
* Refactor error notifications

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,6 +2,9 @@ yes=Yes
 no=No
 percentage={0,number,#.#}%
 report=Report
+getHelp=Get Help
+copyError=Copy Error
+findHelp=If this error continues use the Get Help button to open the help forum. Make sure to check the FAQ and previous topics. If you make a new topic please include your logs which can be opened from the menu in the top left of the client.
 errorDetails=Error details
 cancel=Cancel
 dismiss=Dismiss
@@ -305,6 +308,7 @@ game.mapGeneration.failed.title=Map generation failed.
 game.mapGeneration.failed.message=The requested map could not be generated, the map generation process did not terminate within timeout. Killing process.
 game.mapGeneration.downloadGenerator.title=Downloading map generator version {0}
 game.mapGeneration.generateMap.title=Generating map... (Version: {0})
+game.crash=It looks like Supreme Commander: Forged Alliance crashed check the game log {0} for more information
 featuredMod.displayName=Game mod name
 featuredMod.technicalName=Game mod short name
 ladder.searchPrompt=Search rank or player…
@@ -525,6 +529,7 @@ corruptedMods.show=Show
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
 corruptedReplayFiles.show=Show
 mapNotFound=Map ''{0}'' could not be found on the server nor on this computer.
+replayNotAvailable=Replay {0,number,#} is not yet available from the server. Please try again later.
 replayCouldNotBeStarted=Replay {0,number,#} could not be started. See error message below.
 liveReplayCouldNotBeStarted=Live replay could not be started. See error message below.
 duration.seconds={0,number,#}s
