Update messages_cat.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cat.properties
+++ b/src/main/resources/i18n/messages_cat.properties
@@ -751,6 +751,7 @@ replay.abortAfterMapNotFound = Aborta i mostra'm informació
 replay.mapDownloadFailed = Descàrrega del mapa fallida per a aquesta repetició
 replay.mapDownloadFailed.wannaContinue = No hem pogut trobar el mapa esmentat en el fitxer de repetició. Tot i així la partida pot saber on trobar-lo. Considera això un avís, perquè aquesta repetició pot estar trencada.
 map.unknown = desconegut
+# Fuzzy
 settings.account.goWebsite = Per a la majoria d'activitats relacionades amb el compte has de visitar la nostra pàgina web.
 settings.account.goWebsiteButton = Visita la pàgina web de FAForever
 map.versionId = ID de versió de mapa
