Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -64,7 +64,7 @@ ranked1v1.play = Speel
 ranked1v1.cancel = Annuleer
 ranked1v1.choseFactions.title = Selecteer facties
 ranked1v1.choseFactions.description = Wanneer het spel start, zulllen één of meer geselecteerde facties aan jou worden toegewezen.
-ranked1v1.rating.title = Jouw plaats
+ranked1v1.rating.title = Jouw classificatie
 ranked1v1.rankingDistribution = Verdeling classificatie
 ranked1v1.rankingDistribution.x = Classificatie
 ranked1v1.rankingDistribution.y = Spelers
@@ -75,7 +75,7 @@ ranked1v1.ratingHint.good = Jouw plaats is goed. Concentreer je op de details om
 ranked1v1.ratingHint.high = Jouw plaats is hoog. Wil je anderen helpen om te verbeteren?
 ranked1v1.ratingHint.top = Gefeliciteerd\! Je bent nu een top speler. Deel je kennis.
 ranked1v1.gamesPlayed = Spellen gespeeld
-ranked1v1.ranking = Jouw plaats
+ranked1v1.ranking = Jou classificatie
 ranked1v1.rankingOutOf = van {0,number,#} spelers
 ranked1v1.searching = Zoeken naar een tegenstander...
 ranked1v1.winLossRation = Win/verlies ratio
@@ -778,6 +778,7 @@ replay.abortAfterMapNotFound = Breek af en toon meer informatie
 replay.mapDownloadFailed = Map download mislukt voor deze replay
 replay.mapDownloadFailed.wannaContinue = We konden de kaart die in het replay-bestand wordt genoemd niet vinden. Het spel kan echter nog steeds weten waar het te vinden is. Beschouw dit als de waarschuwing dat deze replay misschien niet werkt.
 map.unknown = niet bekend
+# Fuzzy
 settings.account.goWebsite = Voor de meeste account-gerelateerde activiteiten moet je onze website bezoeken.
 # Fuzzy
 settings.account.goWebsiteButton = Bezoek de Faforever website
@@ -856,12 +857,20 @@ game.generateMap.lots = Veel
 settings.appearance.backgroundImage = Achtergrond
 settings.appearance.backgroundImage.description = Een achtergrond instellen zal meer geheugen gebruiken.
 settings.checkForPrerelease.description = Wanneer je controleert voor client updates, controleer ook voor pre-releases.
+settings.prereleaseFeedback.description = Doe mee in ons Discord kanaal om feedback te geven voor pre-release programma's.
+settings.general.startTab.description = De tab om het programma mee te openen
+settings.chat.maxMessages.description = Het aantal chatberichten dat bewaard wordt in de chatgeschiedenis. Een hoger aantal gebruikt meer geheugen.
 settings.chat.previewImages.description = Bekijk afbeelding URL's met de muis cursor.
+settings.chat.timeFormat.description = In welk formaat de tijd wordt weergeven in de chat.
 settings.chat.chatFormat.description = Zal alleen toegepast worden op nieuwe berichten.
 settings.chat.hideFoe.description = Verberg chat berichten die verzonden zijn door spelers gemarkeerd als vijand.
 settings.chat.autoJoinChannels = Automatisch-Meedoen Kanalen.
+settings.notifications.enableNotifications.description = Schakel alle algemene visuele notificaties aan of uit.
 settings.notifications.position = Notificatie Positie
+settings.sounds.enable.description = Schakel alle algemene geluiden aan of uit.
 settings.fa.autoDownloadMaps.description = Het automatisch downloaden van missende kaarten.
+settings.fa.forceRelay.description = Gebruik altijd een relay server in plaats van direct verbinden met peers. Dit leidt tot langzamere connecties, maar kan connectieproblemen oplossen.
+settings.chat.notifyOnAtMentionOnly.description = Ontvang alleen een chat notificatie als iemand jou vermeld met {0}.
 settings.general.disallowDiscordJoins = Niet toestaan meedoen via Discord.
 settings.general.disallowDiscordJoins.description = Laat andere speler niet toe aan je spel via Discord Rich Presense.
 settings.general.vaultFallbackLocation.description = Gebruik dit als het downloaden van de map/mod problemen geeft en het spel kan de mappen/mods niet vinden.
@@ -876,6 +885,7 @@ vault.replays.copyReplayPath = Kopieer Replay Pad
 game.generateMap.less = Minder
 game.generateMap.more = Meer
 discord.join = Doe mee met FAF op Discord
+game.reasonNotValid = Spel is niet beoordeeld. Rede\: {0}
 game.reasonNotValid.desync = Te Veel Desynchronisaties
 game.reasonNotValid.wrongCondition = Verkeerde Overwinning Conditie.
 game.reasonNotValid.fogOfWar = Geen Mist van Oorlog
@@ -886,22 +896,35 @@ game.reasonNotValid.coop = Coöperatief Spel
 game.reasonNotValid.ffa = Ieder voor zich
 game.reasonNotValid.unevenTeams = Niet-gelijke Teams.
 game.reasonNotValid.unknown = Onbekend Resultaat
+game.reasonNotValid.teamsUnlocked = Teams ontgrendeld
 game.reasonNotValid.multipleTeams = Meerdere Teams
 game.reasonNotValid.civiliansRevealed = Laat burgers zien
 game.reasonNotValid.difficulty = Verkeerde Moeilijkheid
 game.reasonNotValid.expansion = Uitbreiding Uitgeschakeld
 game.reasonNotValid.other = Anders
 exitWarning.title = Waarschuwing
+settings.data.gameDataCache.time.description = Bepaald hoe lang databestanden van het spel worden gecached. Zet naar een hoge hoeveelheid tijd als je downloads wil vermijden. Zet naar een kleine hoeveelheid tijd als je hoog schijfgebruik wil vermijden.
+settings.data.gameDataCache = Spel data cache
+settings.data.clearCache = Leeg cache
+settings.data.clearCache.description = Nog niet toegepast. Help ons deze knop maken.
+settings.data.clearCache.button = Leeg caches
+settings.general.cacheLifeTime = Bestanden gecached voor (in dagen)\:
 chat.filter.countryPrompt = Land code
+game.generateMap.generationType = Generatie Type
+game.generateMap.casual = Gewoon
 game.generateMap.tournament = Tournament
+game.generateMap.blind = Blind
 settings.date.system = Auto
 settings.date.mdy = Maand/Dag/Jaar
 settings.date.dmy = Dag/Maand/Jaar
 settings.chat.dateFormat = Formaat datum
+chat.error.noHashTag = Kanaal Naam moet starten met \# (Probeer \#{0})
 mod.idNumber = \#{0}
 label.copy = kopie
 settings.fa.allowReplayWhileInGame = Laat herhalingen kjken toe in het spel.
 settings.fa.allowReplayWhileInGame.experimental = Experimenteel
+error.game.filesNotAccessible = Sommige bestanden van het geïnstalleerde spel kunnen niet gekopieerd worden naar FAF, tenzij je recent aangepaste spelbestanden in de geïnstalleerde versie hebt, maakt het je waarschijnlijk niet uit. We starten alsnog het spel voor je.
+game.gameRunning = Spel kan niet starten, omdat Forged Alliance al is opgestart.
 chat.userColor = Kleur
 review.currentVersion = Huidige versie
 review.version = Versie {0}
@@ -913,9 +936,12 @@ main.replay = Herhalingen
 main.maps = Mappen
 main.mods = Mods
 game.date = Datum spel
+game.onlyRanked = Alleen geclassificeerd
 game.map.author = Maker map
 vault.savedQueries = Favorieten
 vault.saveQuery = Bewaar zoekopdracht
+map.onlyRanked = Alleen geclassificeerd
+map.reviewScore = Beoordeel score
 map.widthPixels = Breedte (in px)
 map.heightPixels = Hoogte (in px)
 query.moreFilters = Meer filters
@@ -925,6 +951,8 @@ query.rangeFilter = {0}\: {1} tot {2}
 query.dateRangeFilter = {0}\: van {1} tot {2}
 query.afterDate = Voor
 query.beforeDate = Na
+mod.onlyRanked = Alleen geclassificeerd
+mod.reviewScore = Beoordeel score
 search.lowValue = Minimum
 search.highValue = Maximum
 search.afterDate = Na datum
@@ -932,3 +960,35 @@ search.beforeDate = Voor datum
 search.removeQuery = Verwijder zoekopdracht
 game.globalRating = Wereld rang
 game.ladderRating = Positie rang
+teammatchmaking.leaveParty = Verlaat groep
+teammatchmaking.invitePlayer = Nodig spelers uit
+teammatchmaking.invite = Uitnodigen
+teammatchmaking.invitedPlayers = Uitgenodige spelers\:
+teammatchmaking.mapPool = Kaartlijst
+teammatchmaking.playersInQueue = In Wachtrij\: {0,number,#}
+teammatchmaking.notification.invite.title = Uitgenodigd voor groep
+teammatchmaking.notification.invite.join = Meedoen
+teammatchmaking.match.found = Wedstrijd gevonden\!
+teammatchmaking.match.starting = Wedstrijd start op...
+teammatchmaking.match.cancelled = Wedstrijd gecanceld\!
+teammatchmaking.notification.matchFound.title = Wedstrijd gevonden
+teammatchmaking.notification.matchFound.message = Wedstrijd gevonden en start binnenkort
+teammatchmaking.notification.inviteAlreadyInQueue.title = Je staat al in de wachtrij
+teammatchmaking.notification.inviteAlreadyInQueue.message = Verlaat alstublieft alle wachtrijen voordat je spelers uitnodigd
+teammatchmaking.notification.joinAlreadyInQueue.title = Je bent al in een wachtrij
+teammatchmaking.partyTitle = Jou spel\:
+teammatchmaking.queue.ladder1v1 = 1v1 wachtrij
+teammatchmaking.queue.tmm2v2 = 2v2 wachtrij
+chat.groupChat.playerDisconnect = {0} heeft de verbinding verbroken
+chat.groupChat.playerConnect = {0} heeft verbinding gemaakt
+game.generateMap.mexSlider = Mexes
+game.generateMap.reclaimSlider = Reclaim
+game.generateMap.unexplored = Onontdekt
+replay.enrich.error = Informatie kan niet worden gedownload
+review.delete.error = Deze beoordeling kan niet verwijderd worden
+review.save.error = Deze beoordeling kan niet opgeslagen worden
+settings.general.debugLog = Schakel DEBUG logging in
+settings.general.debugLog.description = Verhoog de log level voor DEBUG om problemen op te lossen.
+settings.general.debugLog.button = Start
+# Fuzzy
+replay.inQueue = Herhaling kan niet worden gestart, omdat je in een wachtrij staat. Verlaat de wachtrij om de herhaling te bekijken
